renamed source.html to index.html added metadata for charset
Signed-off-by: sandermfc <mathieu.robinson17@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Online Web Synthesizer</title>
+    <meta charset="UTF-8">
     <script src="./scripts/audioStuff.js"></script>
     
     <style>
