--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
     </style>
 </head>
 
+<!--The piano component is not done, it is not responsive and is missing a lot of formatting stuff in general.
+     I believe it may be safe to start associating the js functions to the onclicks on the correct IDs of the keys
+     but these may change if the current design cannot be transferred to responsive design, I will however make sure the ids stay the same-->
 <body>
+<!-- This is the container for the title text-->
 <div class="row">
     <div class="col-sm-12">
         <div class="TitleContainer">
@@ -84,6 +88,7 @@
     </div>
 </div>
 
+<!--The Record button container, currently on its own-->
 <div class="row">
     <div class="col-sm-12"> 
         <div class="recordButtonContainer">
@@ -92,6 +97,7 @@
     </div>
 </div>
 
+<!--The Piano component container-->
 <div class="row">
     <div class="col-sm-12 mx-sm-2">
         <div class="PianoComponent">
@@ -117,6 +123,7 @@
     </div>
 </div>
 
+<!--The octave button container-->
 <div class="row">
     <div class="col-sm-4">
         <div class="octaveButtons">
@@ -126,6 +133,7 @@
     </div>
 </div>
 
+<!--Matt's test buttons-->
 <div id="piano">
     <button id="but_bass">Bass</button>
 </div>
@@ -140,6 +148,7 @@
     </select>
 </div>
 
+<!--How to text stuff //will be the last container on the site-->
 <div class="row">
     <div class="col-sm-12">
         <div id="Information">
