Added value to key divs to easily scale frequency.
Signed-off-by: sandermfc <mathieu.robinson17@gmail.com>

--- a/index.html
+++ b/index.html
@@ -101,24 +101,24 @@
 <div class="row">
     <div class="col-sm-12 mx-sm-2">
         <div class="PianoComponent">
-            <div id="a" class="whiteKey">A</div>
-            <div id="w" class="blackKey">W</div>
-            <div id="s" class="whiteKey">S</div>
-            <div id="e" class="blackKey">E</div>
-            <div id="d" class="whiteKey">D</div>
-            <div id="f" class="whiteKey">F</div>
-            <div id="t" class="blackKey">T</div>
-            <div id="g" class="whiteKey">G</div>
-            <div id="y" class="blackKey">Y</div>
-            <div id="h" class="whiteKey">H</div>
-            <div id="u" class="blackKey">U</div>
-            <div id="j" class="whiteKey">J</div>
-            <div id="k" class="whiteKey">K</div>
-            <div id="o" class="blackKey">O</div>
-            <div id="l" class="whiteKey">L</div>
-            <div id="p" class="blackKey">P</div>
-            <div id="semiColon" class="whiteKey">;</div>
-            <div id="apostrophe" class="whiteKey">'</div>
+            <div id="a" value="0" class="whiteKey">A</div>
+            <div id="w" value="1" class="blackKey">W</div>
+            <div id="s" value="2" class="whiteKey">S</div>
+            <div id="e" value="3" class="blackKey">E</div>
+            <div id="d" value="4" class="whiteKey">D</div>
+            <div id="f" value="5" class="whiteKey">F</div>
+            <div id="t" value="6" class="blackKey">T</div>
+            <div id="g" value="7" class="whiteKey">G</div>
+            <div id="y" value="8" class="blackKey">Y</div>
+            <div id="h" value="9" class="whiteKey">H</div>
+            <div id="u" value="10" class="blackKey">U</div>
+            <div id="j" value="11" class="whiteKey">J</div>
+            <div id="k" value="12" class="whiteKey">K</div>
+            <div id="o" value="13" class="blackKey">O</div>
+            <div id="l" value="14" class="whiteKey">L</div>
+            <div id="p" value="15" class="blackKey">P</div>
+            <div id="semiColon" value="16" class="whiteKey">;</div>
+            <div id="apostrophe" value="17" class="whiteKey">'</div>
         </div>
     </div>
 </div>
