--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     </script>
     <!--No style is final, just testing-->
     <style>
+        /*If you don't want the text of something to be selectable, use this class*/
+        .noselect {
+            -webkit-touch-callout: none; /* iOS Safari */
+                -webkit-user-select: none; /* Safari */
+                -khtml-user-select: none; /* Konqueror HTML */
+                -moz-user-select: none; /* Firefox */
+                    -ms-user-select: none; /* Internet Explorer/Edge */
+                        user-select: none; /* Non-prefixed version, currently
+                                            supported by Chrome and Opera */
+        }
+
         #Title{
             background-color: rgb(182, 245, 196);
             height: 100%;
@@ -29,6 +40,7 @@
             margin-right: 25%;
         }
         .whiteKey{
+            position: relative;
             display:inline-block;
             vertical-align: top;
             border-style: solid;
@@ -37,21 +49,22 @@
             color: black;
             left: 0px;
             top: 0px;
-            width: 50px;
+            width: 55px;
             height: 300px;
             z-index: 1;
         }
 
         .blackKey{
+            position: relative;
             display:inline-block;
             vertical-align: top;
             border-style: solid;
             border-width: 0.01em;
             background-color: black;
             color: white;
-            left: 75px;
-            top: 100px;
-            width: 50px;
+            /*left: 75px;
+            top: 100px;*/
+            width: 55px;
             height: 200px;
             z-index: 2;
         }
@@ -69,7 +82,26 @@
             display:flex;
             float:right;
         }
+        
+        .whiteKey span{
+            position: absolute;
+            bottom: 10%;
+            right: 40%;
+        }
 
+        .blackKey span{
+            position: absolute;
+            bottom: 10%;
+            right: 40%;
+        }
+
+        .whiteKey:active{
+            background-color:blue;
+        }
+
+        .blackKey:active{
+            background-color:blue;
+        }
     </style>
 </head>
 
@@ -92,7 +124,7 @@
 <div class="row">
     <div class="col-sm-12"> 
         <div class="recordButtonContainer">
-                <button id="recordButton"><img src="images/recordbutton.png" style="width:20px;height:20px;"></button>
+                <button id="recordButton" class="noselect"><img src="images/recordbutton.png" style="width:20px;height:20px;"></button>
         </div>
     </div>
 </div>
@@ -101,24 +133,24 @@
 <div class="row">
     <div class="col-sm-12 mx-sm-2">
         <div class="PianoComponent">
-            <div id="a" value="0" class="whiteKey">A</div>
-            <div id="w" value="1" class="blackKey">W</div>
-            <div id="s" value="2" class="whiteKey">S</div>
-            <div id="e" value="3" class="blackKey">E</div>
-            <div id="d" value="4" class="whiteKey">D</div>
-            <div id="f" value="5" class="whiteKey">F</div>
-            <div id="t" value="6" class="blackKey">T</div>
-            <div id="g" value="7" class="whiteKey">G</div>
-            <div id="y" value="8" class="blackKey">Y</div>
-            <div id="h" value="9" class="whiteKey">H</div>
-            <div id="u" value="10" class="blackKey">U</div>
-            <div id="j" value="11" class="whiteKey">J</div>
-            <div id="k" value="12" class="whiteKey">K</div>
-            <div id="o" value="13" class="blackKey">O</div>
-            <div id="l" value="14" class="whiteKey">L</div>
-            <div id="p" value="15" class="blackKey">P</div>
-            <div id="semiColon" value="16" class="whiteKey">;</div>
-            <div id="apostrophe" value="17" class="whiteKey">'</div>
+            <div id="a" value="0" class="whiteKey"><span class="noselect">A</span></div>
+            <div id="w" value="1" class="blackKey"><span class="noselect">W</span></div>
+            <div id="s" value="2" class="whiteKey"><span class="noselect">S</span></div>
+            <div id="e" value="3" class="blackKey"><span class="noselect">E</span></div>
+            <div id="d" value="4" class="whiteKey"><span class="noselect">D</span></div>
+            <div id="f" value="5" class="whiteKey"><span class="noselect">F</span></div>
+            <div id="t" value="6" class="blackKey"><span class="noselect">T</span></div>
+            <div id="g" value="7" class="whiteKey"><span class="noselect">G</span></div>
+            <div id="y" value="8" class="blackKey"><span class="noselect">Y</span></div>
+            <div id="h" value="9" class="whiteKey"><span class="noselect">H</span></div>
+            <div id="u" value="10" class="blackKey"><span class="noselect">U</span></div>
+            <div id="j" value="11" class="whiteKey"><span class="noselect">J</span></div>
+            <div id="k" value="12" class="whiteKey"><span class="noselect">K</span></div>
+            <div id="o" value="13" class="blackKey"><span class="noselect">O</span></div>
+            <div id="l" value="14" class="whiteKey"><span class="noselect">L</span></div>
+            <div id="p" value="15" class="blackKey"><span class="noselect">P</span></div>
+            <div id="semiColon" value="16" class="whiteKey"><span class="noselect">;</span></div>
+            <div id="apostrophe" value="17" class="whiteKey"><span class="noselect">'</span></div>
         </div>
     </div>
 </div>
@@ -127,15 +159,15 @@
 <div class="row">
     <div class="col-sm-4">
         <div class="octaveButtons">
-            <button id="octaveDown" style="width:30px;height:20px;">-</button>
-            <button id="octaveUp" style="width:30px;height:20px;">+</button>
+            <button id="octaveDown" style="width:30px;height:20px;" class="noselect">-</button>
+            <button id="octaveUp" style="width:30px;height:20px;" class="noselect">+</button>
         </div>
     </div>
 </div>
 
 <!--Matt's test buttons-->
 <div id="piano">
-    <button id="but_bass">Bass</button>
+    <button id="but_bass" class="noselect">Bass</button>
 </div>
 <div class="user_parameters">
     <span>Current waveform: </span>
@@ -154,13 +186,15 @@
         <div id="Information">
             <div id="HowToUse">
                 <h2>How to use:</h2>
-                    <h3>There are two possible ways to play the Online Web Synthesizer:</h3>
+                    <h4>There are two possible ways to play the Online Web Synthesizer:</h4>
                         <ul>
                             <li>You can click the notes directly with your mouse or touch screen device.</li>
                         </br>
                             <li>If you have access to a keyboard, you can use the keys on your keyboard associated to the piano, these are shown on the visual component.</li>
                         </ul>
-                    <h3>Click the - or + buttons to change octaves or use the z/x keys</h3>
+                    <h4>Click the - or + buttons to change octaves or use the z/x keys.</h4>
+                    <h4>To record: click the record button in the top right of the Web Synthesizer.</h4>
+                    <h4>To see user recordings: Click here or click the Search tab.</h4>
             </div>
         </div>
     </div>
