--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
 <!--TopNavMenu-->
 <div class="topNavMenu" id="navMenu">
-        <a href="#play" class="active">Play</a>
-        <a href="#search">Search</a>
+        <a href="index.html" class="active">Play</a>
+        <a href="search.html">Search</a>
         <a href="javascript:void(0);" class="icon" onclick="mobileToggle()">&#9776;</a>
 </div>
 <script>
