--- a/search.html
+++ b/search.html
@@ -1,5 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <head>
+    <title>Online Web Synthesizer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+    <!--TopNavMenu-->
+    <div class="topNavMenu" id="navMenu">
+            <a href="index.html"><span class="noselect">Play</span></a>
+            <a href="search.html"><span class="noselect">Search</span></a>
+            <a href="javascript:void(0);" class="icon" onclick="mobileToggle()">&#9776;</a>
+    </div>
+    <script>
+        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function mobileToggle() {
+            var x = document.getElementById("navMenu");
+            if (x.className === "topNavMenu") {
+                x.className += " responsive";
+            } else {
+                x.className = "topNavMenu";
+            }
+        }
+    </script>
+
+    <!-- This is the container for the title text-->
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="TitleContainer">
+                <div id="Title">
+                    <h1 style="text-align:center">Online Web Synthesizer</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
