More responsive design, fixed octave/record button placements

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
     <!--The octave button container-->
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-12">
             <div class="octaveButtons">
-                <button id="octaveDown" style="width:30px;height:20px;" class="noselect">-</button>
-                <button id="octaveUp" style="width:30px;height:20px;" class="noselect">+</button>
+                <button id="octaveDown" style="width:40px;height:30px;" class="noselect">-</button>
+                <button id="octaveUp" style="width:40px;height:30px;" class="noselect">+</button>
             </div>
         </div>
     </div>
@@ -120,8 +120,9 @@
                                 <li>If you have access to a keyboard, you can use the keys on your keyboard associated to the piano, these are shown on the visual component.</li>
                             </ul>
                         <h4>Click the - or + buttons to change octaves or use the z/x keys.</h4>
-                        <h4>To record: click the record button in the top right of the Web Synthesizer.</h4>
-                        <h4>To see user recordings: Click here or click the Search tab.</h4>
+                        <h4>Change the values on the button board to try different sounds!</h4>
+                        <h4><b>To record:</b> click the record button in the top right of the Web Synthesizer.</h4>
+                        <h4><b>To see user recordings:</b> <a href="search.html">Click here</a> or click the Search tab.</h4>
                 </div>
             </div>
         </div>
