Created small button board for user params

--- a/index.html
+++ b/index.html
@@ -95,16 +95,22 @@
     </div>
 
     <!--Matt's test buttons-->
-    <div class="user_parameters">
-        <button id="but_bass" class="noselect">Bass</button>
-        <span class="noselect">Current waveform: </span>
-        <select id="waveSlider" name="waveSlider">
-            <option value="sine">Sine</option>
-            <option value="square" selected>Square</option>
-            <option value="sawtooth">Sawtooth</option>
-            <option value="triangle">Triangle</option>
-            <option value="custom">Custom</option>
-        </select>
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="userParamText"><h4><b>Customizing your sound</b></h4></div>
+            <div class="user_parameters">
+                <button id="but_bass" class="noselect">Bass</button>
+                </br>
+                <span class="noselect">Current waveform: </span>
+                <select id="waveSlider" name="waveSlider">
+                    <option value="sine">Sine</option>
+                    <option value="square" selected>Square</option>
+                    <option value="sawtooth">Sawtooth</option>
+                    <option value="triangle">Triangle</option>
+                    <option value="custom">Custom</option>
+                </select>
+            </div>
+        </div>
     </div>
 
     <!--How to text stuff //will be the last container on the site-->
@@ -112,7 +118,7 @@
         <div class="col-sm-12">
             <div id="Information">
                 <div id="HowToUse">
-                    <h2>How to use:</h2>
+                    <h2><b>How to use:</b></h2>
                         <h4>There are two possible ways to play the Online Web Synthesizer:</h4>
                             <ul>
                                 <li>You can click the notes directly with your mouse or touch screen device.</li>
