--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
     <!--TopNavMenu-->
     <div class="topNavMenu" id="navMenu">
+            <a id="fllbutton" href="index.html"><span class="noselect">Online Web Synthesizer</span></a>
             <a href="index.html"><span class="noselect">Play</span></a>
             <a href="search.html"><span class="noselect">Search</span></a>
             <a href="javascript:void(0);" class="icon" onclick="mobileToggle()">&#9776;</a>
