--- a/search.html
+++ b/search.html
@@ -11,10 +11,11 @@
 <body>
     <!--TopNavMenu-->
     <div class="topNavMenu" id="navMenu">
-            <a href="index.html"><span class="noselect">Play</span></a>
-            <a href="search.html"><span class="noselect">Search</span></a>
-            <a href="javascript:void(0);" class="icon" onclick="mobileToggle()">&#9776;</a>
-    </div>
+		<a id="fllbutton" href="index.html"><span class="noselect">Online Web Synthesizer</span></a>
+		<a href="index.html"><span class="noselect">Play</span></a>
+		<a href="search.html"><span class="noselect">Search</span></a>
+		<a href="javascript:void(0);" class="icon" onclick="mobileToggle()">&#9776;</a>
+	</div>
     <script>
         /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
         function mobileToggle() {
@@ -68,7 +69,7 @@
     <div class="row">
 	<div class="col-sm-12">
 
-		<label>Seach by </label>
+		<label>Search by </label>
 		<select id="searchType">
 			<option value="#artist">Artist</option>
 			<option value="#name">Name</option>
