--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <div class="row">
         <div class="col-sm-12"> 
             <div class="recordButtonContainer">
+                    <audio controls>
+                        <source id="mostRecentPlayback" src="" type="audio/ogg">
+                        Your browser does not support the audio element.
+                    </audio> 
                     <button id="recordButton" class="noselect"><img src="images/recordbutton.png" style="width:20px;height:20px;"></button>
             </div>
         </div>
