Fixed text errors

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <h2><b>How to use:</b></h2>
                         <h4>There are two possible ways to play the Online Web Synthesizer:</h4>
                             <ul>
-                                <li>You can click the notes directly with your mouse or touch screen device.</li>
+                                <li>You can click the notes directly with your mouse or touch the screen on your device.</li>
                             </br>
                                 <li>If you have access to a keyboard, you can use the keys on your keyboard associated to the piano, these are shown on the visual component.</li>
                             </ul>
